--- a/app/src/main/res/drawable/divider.xml
+++ b/app/src/main/res/drawable/divider.xml
@@ -10,7 +10,7 @@
     <item
         android:left="16dp">
         <shape android:shape="rectangle" >
-            <solid android:color="@color/dividers" />
+            <solid android:color="@android:color/transparent" />
         </shape>
     </item>
 </layer-list>
