--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -35,7 +35,7 @@
                     android:hint="@string/hint_title"
                     android:imeOptions="actionNext"
                     android:singleLine="true"
-                    android:textColor="@color/text_color" />
+                    android:textColor="@color/list_item_text" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -51,7 +51,7 @@
                     android:hint="@string/hint_description"
                     android:inputType="textMultiLine"
                     android:minLines="3"
-                    android:textColor="@color/text_color" />
+                    android:textColor="@color/list_item_text" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.v7.widget.SwitchCompat
