--- a/app/src/main/res/layout/fragment_wc.xml
+++ b/app/src/main/res/layout/fragment_wc.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:textColor="@color/secondary_text_color"
+        android:textColor="@color/empty_view_text"
         android:textSize="@dimen/empty_view_text_size"
         android:padding="@dimen/normal_padding"
         android:visibility="gone" />
