--- a/app/src/main/res/layout/item_header_session.xml
+++ b/app/src/main/res/layout/item_header_session.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/medium_margin"
-        android:textColor="@color/secondary_text_color"
+        android:textColor="@color/list_item_subtext"
         android:textSize="@dimen/regular_text_size" />
 
     <ImageView
@@ -26,6 +26,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/side_margin"
         android:text="@string/title_speakers"
-        android:textColor="@color/wc_detail_title"
+        android:textColor="@color/list_item_text"
         android:textSize="@dimen/text_size_18sp" />
 </LinearLayout>
