--- a/app/src/main/res/layout/item_header_speaker.xml
+++ b/app/src/main/res/layout/item_header_speaker.xml
@@ -23,7 +23,7 @@
             android:layout_marginLeft="@dimen/side_margin"
             android:layout_marginStart="@dimen/side_margin"
             android:autoLink="all"
-            android:textColor="@color/secondary_text_color"
+            android:textColor="@color/list_item_subtext"
             android:textSize="16sp" />
     </LinearLayout>
 
@@ -41,6 +41,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/side_margin"
         android:text="@string/title_sessions"
-        android:textColor="@color/wc_detail_title"
+        android:textColor="@color/list_item_text"
         android:textSize="@dimen/text_size_18sp" />
 </LinearLayout>
