--- a/app/src/main/res/layout/item_speaker.xml
+++ b/app/src/main/res/layout/item_speaker.xml
@@ -33,7 +33,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="@dimen/side_margin"
                 android:layout_marginStart="@dimen/side_margin"
-                android:textColor="@color/text_color"
+                android:textColor="@color/list_item_text"
                 android:textSize="@dimen/regular_text_size" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
