--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,18 +4,20 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
 
         <!-- EditText and all other controls color -->
+        <!--
         <item name="colorControlNormal">#eeeeee</item>
         <item name="colorControlActivated">@color/accent_dark</item>
         <item name="colorControlHighlight">@color/accent_dark</item>
-
-        <item name="colorPrimary">@color/flat_blue</item>
-        <item name="colorPrimaryDark">@color/flat_blue</item>
+        -->
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
         <item name="android:windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
         <item name="windowActionModeOverlay">true</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="android:fitsSystemWindows">true</item>
+        <item name="android:textColorPrimary">#fff</item>
     </style>
 
     <style name="SlidingLayoutTab" parent="AppTheme">
@@ -36,7 +38,7 @@
     <style name="SlidingLayoutTabPopUp" parent="AppTheme">
         <item name="android:textColorPrimary">#fff</item>
         <item name="actionMenuTextColor">#fff</item>
-        <item name="android:background">@color/flat_blue_dark</item>
+        <item name="android:background">@color/primary</item>
     </style>
 
     <dimen name="headerbar_elevation">4dp</dimen>
