kill some code by reusing the same toolbar

--- a/app/src/main/res/menu/menu_wc_detail.xml
+++ b/app/src/main/res/menu/menu_wc_detail.xml
@@ -2,10 +2,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/action_bookmark" android:title="@string/action_bookmark"
         android:icon="@drawable/ic_bookmark_outline_white_36dp"
-        app:showAsAction="always" />
-    <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
-        android:icon="@drawable/ic_refresh_white_36dp"
         app:showAsAction="ifRoom" />
+    <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
+        app:showAsAction="never" />
     <item android:id="@+id/item_menu_my_sessions" android:title="@string/mysession_title"
         android:orderInCategory="49" app:showAsAction="never" />
     <item android:id="@+id/item_menu_website" android:title="@string/action_webversion"
