--- a/app/src/main/res/layout/activity_wordcamp_detail.xml
+++ b/app/src/main/res/layout/activity_wordcamp_detail.xml
@@ -28,8 +28,8 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             android:minHeight="?attr/actionBarSize"
-            android:theme="@style/SlidingLayoutTab"
-            app:popupTheme="@style/SlidingLayoutTabPopUp">
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -45,7 +45,8 @@
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     android:singleLine="true"
-                    android:textSize="@dimen/title_text_size" />
+                    android:textSize="@dimen/title_text_size"
+                    android:textColor="@color/text_primary"/>
 
                 <TextView
                     android:id="@+id/sub_title"
