--- a/app/src/main/res/layout/activity_speaker_detail.xml
+++ b/app/src/main/res/layout/activity_speaker_detail.xml
@@ -1,31 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/layout_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:orientation="vertical">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/SlidingLayoutTabPopUp"
-            app:theme="@style/SlidingLayoutTab" />
-    </LinearLayout>
+    <include layout="@layout/toolbar"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@+id/layout_toolbar"
         android:layout_margin="@dimen/side_margin"
         android:orientation="vertical">
 
@@ -42,7 +26,6 @@
         android:id="@+id/layout_zoom"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_centerVertical="true"
         android:visibility="gone">
 
         <org.wordcamp.android.widgets.CircularImageView
@@ -54,4 +37,4 @@
             android:clickable="true"
             android:padding="?attr/actionBarSize" />
     </RelativeLayout>
-</RelativeLayout>
+</LinearLayout>
