--- a/app/src/main/res/layout/activity_wordcamp_detail.xml
+++ b/app/src/main/res/layout/activity_wordcamp_detail.xml
@@ -60,11 +60,18 @@
             </LinearLayout>
 
         </android.support.v7.widget.Toolbar>
+        <ScrollView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:scrollbars="none"
+            android:layout_weight="1">
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/sliding_tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            <android.support.design.widget.TabLayout
+                android:id="@+id/sliding_tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:isScrollContainer="true"/>
+        </ScrollView>
     </LinearLayout>
 
 </FrameLayout>
