--- a/app/src/main/res/drawable/divider.xml
+++ b/app/src/main/res/drawable/divider.xml
@@ -1,16 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item
-        android:left="0dp"
-        android:right="0dp">
+    <item>
         <shape android:shape="rectangle" >
-            <solid android:color="#fff" />
-        </shape>
-    </item>
-    <item
-        android:left="16dp">
-        <shape android:shape="rectangle" >
-            <solid android:color="@android:color/transparent" />
+            <solid android:color="@color/grey_light" />
         </shape>
     </item>
 </layer-list>
