--- a/app/src/main/res/layout/activity_wordcamp_detail.xml
+++ b/app/src/main/res/layout/activity_wordcamp_detail.xml
@@ -1,8 +1,8 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<FrameLayout android:id="@+id/container"
+             xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
 
     <FrameLayout
         android:id="@+id/pager_wrapper"
@@ -12,7 +12,7 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/pager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"/>
     </FrameLayout>
 
     <LinearLayout
@@ -45,8 +45,8 @@
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     android:singleLine="true"
-                    android:textSize="@dimen/title_text_size"
-                    android:textColor="@color/text_primary"/>
+                    android:textColor="@color/text_primary"
+                    android:textSize="@dimen/title_text_size"/>
 
                 <TextView
                     android:id="@+id/sub_title"
@@ -56,22 +56,15 @@
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     android:singleLine="true"
-                    android:textSize="@dimen/regular_text_size" />
+                    android:textSize="@dimen/regular_text_size"/>
             </LinearLayout>
 
         </android.support.v7.widget.Toolbar>
-        <ScrollView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:scrollbars="none"
-            android:layout_weight="1">
 
-            <android.support.design.widget.TabLayout
-                android:id="@+id/sliding_tabs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:isScrollContainer="true"/>
-        </ScrollView>
+        <android.support.design.widget.TabLayout
+            android:id="@+id/sliding_tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:isScrollContainer="true"/>
     </LinearLayout>
-
 </FrameLayout>
