--- a/app/src/main/res/layout/fragment_wcdetails_overview.xml
+++ b/app/src/main/res/layout/fragment_wcdetails_overview.xml
@@ -1,115 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:card_view="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_refresh_layout"
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/swipe_refresh_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/almost_white">
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="@dimen/normal_padding">
 
-        <org.wordcamp.android.widgets.MaterialScrollView
+        <android.support.v7.widget.CardView
+            android:id="@+id/about_card"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:layout_marginBottom="@dimen/normal_padding"
+            card_view:cardUseCompatPadding="true">
+
+            <LinearLayout
+                android:padding="@dimen/normal_padding"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/wc_date"
+                    android:textColor="@color/text"
+                    android:textSize="@dimen/title_text_size"
+                    android:layout_marginBottom="@dimen/normal_padding"/>
+
+                <TextView
+                    android:id="@+id/wc_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/list_item_subtext"
+                    android:textSize="@dimen/regular_text_size"
+                    tools:text="June 29, 2015 - June 30, 2015"/>
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/location_card"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:padding="@dimen/normal_padding"
+            android:layout_marginBottom="@dimen/normal_padding"
+            card_view:cardUseCompatPadding="true">
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/wc_location"
+                    android:textColor="@color/text"
+                    android:textSize="@dimen/title_text_size"
+                    android:layout_margin="@dimen/normal_padding"/>
+
+                <TextView
+                    android:id="@+id/wc_location"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/list_item_subtext"
+                    android:textSize="@dimen/regular_text_size"
+                    android:layout_marginBottom="@dimen/side_margin"
+                    android:layout_marginStart="@dimen/normal_padding"
+                    android:layout_marginEnd="@dimen/normal_padding"
+                    android:layout_marginLeft="@dimen/normal_padding"
+                    android:layout_marginRight="@dimen/normal_padding"
+                    tools:text="La Reserve de Quasimodo\n4 Rue de la Colombe\n75004 Paris"/>
+
+                <ImageView
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:background="@drawable/divider"/>
+
+                <Button
+                    android:id="@+id/navigate_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/action_navigate"
+                    android:textColor="@color/blue_dark"
+                    style="?android:attr/borderlessButtonStyle"/>
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/about_card"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#fff"
-            android:overScrollMode="never">
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            card_view:cardUseCompatPadding="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <LinearLayout
-                    android:id="@+id/wc_image_container"
-                    android:layout_width="fill_parent"
+                <TextView
+                    android:id="@+id/wc_about_header"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:visibility="gone">
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:text="@string/wc_about"
+                    android:textColor="@color/text"
+                    android:textSize="@dimen/title_text_size"
+                    android:layout_margin="@dimen/normal_padding"/>
 
-                    <ImageView
-                        android:id="@+id/featuredImage"
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        android:scaleType="fitStart"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/centerLayoutDetail"
-                    android:layout_width="fill_parent"
+                <TextView
+                    android:id="@+id/wc_about"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#fff"
-                    android:orientation="vertical"
-                    android:padding="@dimen/wc_overview_center_padding">
+                    android:textColor="@color/list_item_subtext"
+                    android:textSize="@dimen/regular_text_size"
+                    android:layout_marginBottom="@dimen/normal_padding"
+                    android:layout_marginStart="@dimen/normal_padding"
+                    android:layout_marginEnd="@dimen/normal_padding"
+                    android:layout_marginLeft="@dimen/normal_padding"
+                    android:layout_marginRight="@dimen/normal_padding"
+                    tools:text="Best WordCamp in the World\nBest WordCamp in the World\nBest WordCamp in the World"/>
 
-                    <TextView
-                        android:id="@+id/wc_loc_header"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:text="@string/wc_location"
-                        android:textColor="@color/accent_material_light"
-                        android:textSize="@dimen/title_text_size"/>
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@drawable/divider"/>
 
-                    <TextView
-                        android:id="@+id/wc_location"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/side_margin"
-                        android:textColor="@color/text"
-                        android:textSize="@dimen/regular_text_size"/>
-
-                    <TextView
-                        android:id="@+id/wc_about_header"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:text="@string/wc_about"
-                        android:textColor="@color/text"
-                        android:textSize="@dimen/title_text_size"/>
-
-                    <TextView
-                        android:id="@+id/wc_about"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/text"
-                        android:textSize="@dimen/regular_text_size"/>
-
-                    <ImageView
-                        android:layout_width="fill_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginBottom="@dimen/side_margin"
-                        android:background="@drawable/divider"/>
-
-                    <LinearLayout
-                        android:id="@+id/maps_cotainer"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/highlight"
-                        android:orientation="horizontal"
-                        android:padding="@dimen/side_margin">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="@dimen/side_margin"
-                            android:layout_marginRight="@dimen/side_margin"
-                            android:src="@drawable/ic_directions_car_24dp"/>
-
-                        <TextView
-                            android:id="@+id/maps_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/map_directions_text"
-                            android:textColor="@color/accent_material_light"
-                            android:textSize="@dimen/regular_text_size"/>
-
-                    </LinearLayout>
-
-                </LinearLayout>
+                <Button
+                    android:id="@+id/navigate_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/visit_website"
+                    android:textColor="@color/blue_dark"
+                    style="?android:attr/borderlessButtonStyle"/>
             </LinearLayout>
-        </org.wordcamp.android.widgets.MaterialScrollView>
-    </android.support.v4.widget.SwipeRefreshLayout>
-</LinearLayout>
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
