--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,7 @@
     <dimen name="tab_height">48dp</dimen>
     <dimen name="toolbar_elevation">4dp</dimen>
 
-    <dimen name="list_elevation">8dp</dimen>
+    <dimen name="default_card_elevation">8dp</dimen>
     <dimen name="single_line_list_item">24dp</dimen>
     <dimen name="double_line_list_item">72dp</dimen>
     <dimen name="side_margin">16dp</dimen>
@@ -32,4 +32,5 @@
     <dimen name="text_size_18sp">18sp</dimen>
     <dimen name="title_text_size">20sp</dimen>
     <dimen name="empty_view_text_size">25sp</dimen>
+    <dimen name="cardview_default_corner_radius">4dp</dimen>
 </resources>
